objects/APTS_Pricing_Master_Data_Cube__c.object
<CustomObject>
    <fields>
        <fullName>APTS_ARKTX__c</fullName>
        <description>Short text for sales order item</description>
        <label>Short text for sales order item</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_AUART__c</fullName>
        <description>Sales Document Type</description>
        <label>Sales Document Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Auxillary__c</fullName>
        <label>Auxillary</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BAL_ID__c</fullName>
        <description>Internal Reference</description>
        <label>Internal Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BILHV1__c</fullName>
        <defaultValue>125</defaultValue>
        <label>BILHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BILHV2__c</fullName>
        <label>BILHV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BILHV3__c</fullName>
        <label>BILHV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BILLV1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BILLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BILLV2__c</fullName>
        <label>BILLV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BILLV3__c</fullName>
        <label>BILLV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BILTV1__c</fullName>
        <label>BILTV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BNAME__c</fullName>
        <description>Name of orderer</description>
        <label>Name of orderer</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BOLNR__c</fullName>
        <description>Bill of lading</description>
        <label>Bill of lading</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BSTDK__c</fullName>
        <description>Customer Purchase Order Date</description>
        <label>Customer Purchase Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_BSTKD__c</fullName>
        <description>Customer Purchase Order Number</description>
        <label>Customer Purchase Order Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CCPKey__c</fullName>
        <formula>APTS_FACE_REF_ID__c +  APTS_FACE_REF_LINEID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCPKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CCP_Cost__c</fullName>
        <label>CCP Cost</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_CCP_Quantity__c</fullName>
        <label>CCP Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_CCP_Status__c</fullName>
        <label>CCP Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CLOSE_DATE__c</fullName>
        <description>Closing Date</description>
        <label>Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Channel__c</fullName>
        <label>Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConductorHV1__c</fullName>
        <defaultValue>&quot;Cu&quot;</defaultValue>
        <label>ConductorHV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConductorHV2__c</fullName>
        <label>ConductorHV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConductorHV3__c</fullName>
        <label>ConductorHV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConductorLV1__c</fullName>
        <defaultValue>&quot;Cu&quot;</defaultValue>
        <label>ConductorLV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConductorLV2__c</fullName>
        <label>ConductorLV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConductorLV3__c</fullName>
        <label>ConductorLV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConductorTV1__c</fullName>
        <label>ConductorTV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConnectionHV1__c</fullName>
        <label>ConnectionHV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConnectionHV2__c</fullName>
        <label>ConnectionHV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConnectionHV3__c</fullName>
        <label>ConnectionHV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConnectionLV1__c</fullName>
        <label>ConnectionLV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConnectionLV2__c</fullName>
        <label>ConnectionLV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConnectionLV3__c</fullName>
        <label>ConnectionLV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConnectionTV1__c</fullName>
        <label>ConnectionTV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CoolClass__c</fullName>
        <defaultValue>&quot;ONAN&quot;</defaultValue>
        <label>CoolClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CoolingManufacture__c</fullName>
        <label>CoolingManufacture</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_CoreMaterial__c</fullName>
        <label>CoreMaterial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CoreType__c</fullName>
        <label>CoreType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DELETE_Header__c</fullName>
        <label>DELETE_Header</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DELETE__c</fullName>
        <label>DELETE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DEMO_Current__c</fullName>
        <label>Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_DEMO_Voltage__c</fullName>
        <label>Voltage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_DETCMinusHV1__c</fullName>
        <defaultValue>2</defaultValue>
        <label>DETCMinusHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_DETCMinusLV1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DETCMinusLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_DETCNameDetails__c</fullName>
        <label>DETCNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DETCPlusHV1__c</fullName>
        <defaultValue>2</defaultValue>
        <label>DETCPlusHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_DETCPlusLV1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DETCPlusLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_DETCStepSizeHV1__c</fullName>
        <defaultValue>2.5</defaultValue>
        <label>DETCStepSizeHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_DETCStepSizeLV1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DETCStepSizeLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_DETCTypeHV1__c</fullName>
        <defaultValue>&quot;+2 -2 2.5%&quot;</defaultValue>
        <label>DETCTypeHV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DETCTypeHV2__c</fullName>
        <label>DETCTypeHV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DETCTypeHV3__c</fullName>
        <label>DETCTypeHV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DETCTypeLV1__c</fullName>
        <defaultValue>&quot;B_NOTAPS&quot;</defaultValue>
        <label>DETCTypeLV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DETCTypeLV2__c</fullName>
        <label>DETCTypeLV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DETCTypeLV3__c</fullName>
        <label>DETCTypeLV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DETCTypeTV1__c</fullName>
        <label>DETCTypeTV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Delete_Final__c</fullName>
        <formula>IF(AND(ISBLANK(APTS_DELETE__c),ISBLANK(APTS_DELETE_Header__c)),FALSE,TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delete Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ERDAT__c</fullName>
        <description>Date on which record was created</description>
        <label>Date on which record was created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_ERPID__c</fullName>
        <label>ERPID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ERZET__c</fullName>
        <description>Entry Time</description>
        <label>Entry Time</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FACE_REF_ID__c</fullName>
        <description>Apttus Quote Id</description>
        <label>Apttus Quote Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FACE_REF_LINEID__c</fullName>
        <description>Apttus Quote Line Id</description>
        <label>Apttus Quote Line Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FF_Gross_Margin__c</fullName>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_FF_Net_Margin__c</fullName>
        <label>Net Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_FKART__c</fullName>
        <description>Billing Type</description>
        <label>Billing Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FKDAT__c</fullName>
        <description>Billing Date</description>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Frequency__c</fullName>
        <defaultValue>50</defaultValue>
        <label>Frequency</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_GUID__c</fullName>
        <label>GUID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_HVBushingNameDetails__c</fullName>
        <label>HVBushingNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_HVNeutralBushingNameDetails__c</fullName>
        <label>HVNeutralBushingNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Impedance__c</fullName>
        <defaultValue>6</defaultValue>
        <label>Impedance</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Industry_Usage_Level_1__c</fullName>
        <label>Industry Usage Level 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Industry_Usage_Level_2__c</fullName>
        <label>Industry Usage Level 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Industry_Usage_Level_3__c</fullName>
        <label>Industry Usage Level 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Industry_Usage__c</fullName>
        <formula>IF(APTS_Industry_Usage_Level_3__c&lt;&gt;&quot;&quot;,APTS_Industry_Usage_Level_3__c,APTS_Industry_Usage_Level_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Usage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Item_Key__c</fullName>
        <formula>APTS_ERPID__c + APTS_VBELN__c + APTS_POSNN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_KUNNR__c</fullName>
        <description>Sold to Party</description>
        <label>Sold to Party</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_KURSK_ASSOLD__c</fullName>
        <description>Ex. Rate for Price Determination-As Sold</description>
        <label>Ex. Rate for Price Determination</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_KURSK__c</fullName>
        <description>Ex. Rate for Price Determination</description>
        <label>Current Ex. Rate for Price Determination</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LFART__c</fullName>
        <description>Delivery Type</description>
        <label>Delivery Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LVBushingNameDetails__c</fullName>
        <label>LVBushingNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LVNeutralBushingNameDetails__c</fullName>
        <label>LVNeutralBushingNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Status_CCP__c</fullName>
        <formula>CASE(APTS_CCP_Status__c,
&apos;Future&apos;,&apos;Cancelled&apos;,
&apos;Cancelled&apos;,&apos;Cancelled&apos;,
&apos;Open&apos;,&apos;Open&apos;,
&apos;Draft&apos;,&apos;Open&apos;,
&apos;Budget&apos;,&apos;Open&apos;,
&apos;Ordered&apos;,&apos;Won&apos;,
&apos;Won&apos;,&apos;Won&apos;,
&apos;Closed&apos;,&apos;Lost&apos;,
&apos;Lost&apos;,&apos;Lost&apos;,&apos;Cancelled&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Status_CCP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Status_ERP__c</fullName>
        <formula>IF(APTS_ERPID__c = &apos;NA&apos;,&apos;NO&apos;,&apos;YES&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Status_ERP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Status_Pricing__c</fullName>
        <formula>IF(APTS_Line_Status_ERP__c = &apos;YES&apos;,&apos;WON&apos;,
IF(APTS_Line_Status_CCP__c = &apos;Won&apos;,&apos;WON&apos;, APTS_Line_Status_CCP__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Status_Pricing+</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LoadLossEvaluation__c</fullName>
        <label>LoadLossEvaluation</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LoadLosses__c</fullName>
        <label>LoadLosses</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_LocalType__c</fullName>
        <label>LocalType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MATNR__c</fullName>
        <description>Material Number</description>
        <label>Material Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MEINS__c</fullName>
        <description>UoM</description>
        <label>UoM</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_MENGE_AD__c</fullName>
        <description>Quantity</description>
        <label>Quantity Additional Data</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_MENGE_ASSOLD__c</fullName>
        <description>Quantity in Sales Units – First fill</description>
        <label>Quantity in Sales Units – First fill</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_MENGE__c</fullName>
        <description>Order Quantity in Sales Units</description>
        <label>Order Quantity in Sales Units</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_MTO100A__c</fullName>
        <description>Qualifier</description>
        <label>Direct Material (MTO100A)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_MTO100B__c</fullName>
        <description>Qualifier</description>
        <label>Direct Material (MTO100B)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_MTO110A__c</fullName>
        <description>Qualifier</description>
        <label>External Services (MTO110A)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_MTO110B__c</fullName>
        <description>Qualifier</description>
        <label>External Services (MTO110B)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_MTO120A__c</fullName>
        <description>Qualifier</description>
        <label>Purchasing Overheads (MTO120A)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_MTO120B__c</fullName>
        <description>Qualifier</description>
        <label>Purchasing Overheads (MTO120B)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_NETWR_ASSOLD__c</fullName>
        <description>Net Value of order item doc. Currency</description>
        <label>Net Val of order item- Doc Currency</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_NETWR_FC__c</fullName>
        <label>Current Net Value - Factory Currency</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_NETWR__c</fullName>
        <description>Cur. Net Val of order item doc. Currency</description>
        <label>Cur. Net Val of order item- Doc Currency</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_NoLoadLossEvaluation__c</fullName>
        <label>NoLoadLossEvaluation</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_NoLoadLosses__c</fullName>
        <label>NoLoadLosses</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCMinusStepHV1__c</fullName>
        <label>OLTCMinusStepHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCMinusStepLV1__c</fullName>
        <label>OLTCMinusStepLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCNameDetails__c</fullName>
        <label>OLTCNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCPlusStepHV1__c</fullName>
        <label>OLTCPlusStepHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCPlusStepLV1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OLTCPlusStepLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCStepSizeHV1__c</fullName>
        <label>OLTCStepSizeHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCStepSizeLV1__c</fullName>
        <label>OLTCStepSizeLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCTypeHV1__c</fullName>
        <label>OLTCTypeHV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCTypeHV2__c</fullName>
        <label>OLTCTypeHV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCTypeHV3__c</fullName>
        <label>OLTCTypeHV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCTypeLV1__c</fullName>
        <label>OLTCTypeLV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCTypeLV2__c</fullName>
        <label>OLTCTypeLV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCTypeLV3__c</fullName>
        <label>OLTCTypeLV3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OLTCTypeTV1__c</fullName>
        <label>OLTCTypeTV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_POSNN__c</fullName>
        <description>Subsequent item of an SD document</description>
        <label>Subsequent item of an SD document</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PSTYV__c</fullName>
        <description>Sales Document Item Category</description>
        <label>Sales Document Item Category</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PhaseQty__c</fullName>
        <defaultValue>3</defaultValue>
        <label>PhaseQty</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Platform__c</fullName>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PowerFullHV1__c</fullName>
        <label>PowerFullHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerFullHV2__c</fullName>
        <label>PowerFullHV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerFullHV3__c</fullName>
        <label>PowerFullHV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerFullLV1__c</fullName>
        <label>PowerFullLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerFullLV2__c</fullName>
        <label>PowerFullLV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerFullLV3__c</fullName>
        <label>PowerFullLV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerFullTV1__c</fullName>
        <label>PowerFullTV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerLowHV1__c</fullName>
        <label>PowerLowHV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerLowHV2__c</fullName>
        <label>PowerLowHV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerLowHV3__c</fullName>
        <label>PowerLowHV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerLowLV1__c</fullName>
        <label>PowerLowLV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerLowLV2__c</fullName>
        <label>PowerLowLV2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerLowLV3__c</fullName>
        <label>PowerLowLV3</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PowerLowTV1__c</fullName>
        <label>PowerLowTV1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_ProductGroup__c</fullName>
        <defaultValue>&quot;GRM&quot;</defaultValue>
        <label>ProductGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ProductLocalID__c</fullName>
        <defaultValue>&quot;2010539&quot;</defaultValue>
        <label>ProductLocalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_Name__c</fullName>
        <label>Product Line Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity__c</fullName>
        <label>Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Creation_Date__c</fullName>
        <label>Quote Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_ID__c</fullName>
        <label>Quote ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RatedPowerHighest__c</fullName>
        <label>RatedPowerHighest</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_RatedPower__c</fullName>
        <defaultValue>1600</defaultValue>
        <label>RatedPower</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Reactor__c</fullName>
        <label>Reactor</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Replacement__c</fullName>
        <defaultValue>&quot;asdf&quot;</defaultValue>
        <label>Replacement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SPART__c</fullName>
        <description>Division</description>
        <label>Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_STAWE__c</fullName>
        <description>Statistics Currency</description>
        <label>Statistics Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SoundPowerFull__c</fullName>
        <label>SoundPowerFull</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_SoundPower__c</fullName>
        <label>SoundPower</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_SoundPressure__c</fullName>
        <label>SoundPressure</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Standard__c</fullName>
        <defaultValue>&quot;DIN_50464&quot;</defaultValue>
        <label>Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TVBushingNameDetails__c</fullName>
        <label>TVBushingNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TVNeutralBushingNameDetails__c</fullName>
        <label>TVNeutralBushingNameDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TempClass__c</fullName>
        <defaultValue>&quot;A&quot;</defaultValue>
        <label>TempClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TempRiseWindAvg1__c</fullName>
        <defaultValue>65</defaultValue>
        <label>TempRiseWindAvg1</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_TempRiseWindAvg2__c</fullName>
        <label>TempRiseWindAvg2</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_TotalMass__c</fullName>
        <defaultValue>3650</defaultValue>
        <label>TotalMass</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_TotalWeight__c</fullName>
        <defaultValue>3650</defaultValue>
        <label>TotalWeight</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_UEPOS__c</fullName>
        <description>Higher item - bill of material structure</description>
        <label>Higher item - bill of material structure</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VBELN__c</fullName>
        <description>SAP document</description>
        <label>SAP document</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VBTYP__c</fullName>
        <description>Document category of subsequent document</description>
        <label>Document category of subsequent document</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VKBUR__c</fullName>
        <description>Sales Office</description>
        <label>Sales Office</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VKGRP__c</fullName>
        <description>Sales Group</description>
        <label>Sales Group</label>
        <length>3</length>
        <type>Text</type>
    </fields>
</CustomObject>